# Draenor-Core

./: CMakeLists.txt  README.md  revision.h.in.cmake
cmake/: genrev.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/macros/: FindMySQL.cmake  FindOpenSSL.cmake
cmake/platform/win/: settings.cmake
dep/: CMakeLists.txt  PackageList.txt
dep/CascLib/: CMakeLists.txt
dep/CascLib/src/: CascLib.h
dep/SFMT/: SFMT.h
dep/boost/: CMakeLists.txt
dep/fmt/: CMakeLists.txt
dep/protobuf/: CMakeLists.txt
dep/threads/: CMakeLists.txt
sql/MagicStorm/: 07.11.2024_Locales.sql  сокровища дренора.txt
sql/base/: auth_database.sql  web_database.sql
sql/updates/auth/: 2016_03_28_00_auth.sql
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/server/authserver/Bnet2/: Session.hpp
src/server/authserver/Realms/: RealmList.cpp
src/server/authserver/Server/: AuthServer.cpp  AuthServer.h  AuthSession.cpp  AuthSession.h
src/server/bnetserver/: CMakeLists.txt  Main.cpp  bnetserver.conf.dist
src/server/bnetserver/REST/: LoginRESTService.cpp  LoginRESTService.h
src/server/bnetserver/Server/: Realm.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  SocketMgr.h
src/server/bnetserver/Services/: AccountService.h  AuthenticationService.h  ConnectionService.cpp  ConnectionService.h  GameUtilitiesService.h  ServiceDispatcher.h
src/server/collision/: CMakeLists.txt
src/server/collision/Management/: VMapManager2.cpp
src/server/collision/Maps/: MapDefines.cpp  MapDefines.h
src/server/game/: CMakeLists.txt
src/server/game/Accounts/: AccountMgr.cpp
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Anticheat/: AnticheatMgr.h
src/server/game/AuctionHouse/: AuctionHouseMgr.h
src/server/game/BattlePay/: BattlepayMgr.h
src/server/game/Battlefield/: BattlefieldMgr.h
src/server/game/Battlegrounds/: BattlegroundMgr.hpp  BattlegroundPacketFactory.hpp
src/server/game/BlackMarket/: BlackMarketMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h
src/server/game/Cinematic/: CinematicPathMgr.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.cpp  DisableMgr.h
src/server/game/DataStores/: DB2Structure.h  DB2fmt.h  DBCEnums.h  DBCStructure.h
src/server/game/DungeonFinding/: LFGListMgr.h  LFGMgr.cpp  LFGMgr.h  LFGQueue.cpp  LFGQueue.h  LFGScripts.cpp
src/server/game/Events/: GameEventMgr.cpp  GameEventMgr.h
src/server/game/Garrison/: GarrisonBuildingManager.hpp  GarrisonShipmentManager.hpp
src/server/game/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Groups/: Group.cpp  Group.h  GroupMgr.cpp  GroupMgr.h
src/server/game/Guilds/: GuildFinderMgr.h  GuildMgr.cpp  GuildMgr.h
src/server/game/Handlers/: AddonHandler.cpp  AddonHandler.h  BattlePetHandler.cpp  CalendarHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  LFGHandler.cpp  MiscHandler.cpp  PetBattleHandler.cpp  QueryHandler.cpp
src/server/game/Instances/: InstanceSaveMgr.cpp  InstanceSaveMgr.h  InstanceScript.cpp
src/server/game/Loot/: LootLockoutMap.h  LootMgr.cpp
src/server/game/Maps/: GridMap.cpp  GridMap.h  Map.cpp  Map.h  MapInstanced.cpp  MapManager.cpp  MapManager.h  MapUpdater.h  TransportMgr.h
src/server/game/Miscellaneous/: Language.h  SharedDefines.h
src/server/game/Movement/: MotionMaster.cpp  MotionMaster.h  PathGenerator.cpp  PathGenerator.h
src/server/game/OutdoorPvP/: OutdoorPvPMgr.h
src/server/game/PetBattle/: PetBattle.cpp  PetBattle.h  PetBattleAbilityEffect.cpp  WildBattlePet.cpp  WildBattlePet.h
src/server/game/Pools/: PoolMgr.h
src/server/game/Quests/: QuestDef.h
src/server/game/Scripting/: ScriptMgr.cpp  ScriptMgr.h  ScriptSystem.h
src/server/game/Server/: IRSocket.h  IRSocketConnector.h  InterRealmSession.cpp  InterRealmSession.h  WorldSession.cpp  WorldSession.h  WorldSocketMgr.cpp  WorldSocketMgr.h  WorldTcpSession.cpp  WorldTcpSession.h
src/server/game/Spells/: SpellEffects.cpp  SpellMgr.cpp  SpellMgr.h
src/server/game/Texts/: CreatureTextMgr.h
src/server/game/Tickets/: TicketMgr.h
src/server/game/Tools/: PlayerDump.h
src/server/game/Warden/: WardenCheckMgr.cpp  WardenCheckMgr.h  WardenWin.cpp
src/server/game/World/: TimeDiffMgr.h  World.cpp  World.h
src/server/proto/: CMakeLists.txt
src/server/proto/Client/: account_service.pb.h  authentication_service.pb.h  challenge_service.pb.h  channel_service.pb.h  connection_service.pb.h  friends_service.pb.h  game_utilities_service.pb.h  presence_service.pb.h  report_service.pb.h  resource_service.pb.h  user_manager_service.pb.h
src/server/scripts/: CMakeLists.txt
src/server/scripts/Commands/: cs_battlepay.cpp  cs_debug.cpp  cs_gm.cpp  cs_instance.cpp  cs_misc.cpp  cs_reload.cpp  cs_reset.cpp
src/server/scripts/Draenor/: tanaan_jungle_100.cpp
src/server/scripts/Northrend/: storm_peaks.cpp
src/server/scripts/PetBattle/: PetBattleTrainer.cpp
src/server/scripts/Spells/: spell_generic.cpp
src/server/shared/: AutoPtr.h  CMakeLists.txt  Common.cpp  Common.h  Define.h  SystemConfig.h
src/server/shared/Configuration/: Config.cpp  Config.h
src/server/shared/Cryptography/: ARC4.cpp  ARC4.h  BigNumber.cpp  BigNumber.h  HMACSHA1.cpp  HMACSHA1.h  OpenSSLCrypto.cpp  OpenSSLCrypto.h  SHA1.cpp  SHA1.h  SHA256.cpp  SRP6a.cpp  SRP6a.h
src/server/shared/Database/: AdhocStatement.cpp  AdhocStatement.h  DatabaseWorker.cpp  DatabaseWorker.h  DatabaseWorkerPool.h  MySQLConnection.cpp  MySQLConnection.h  MySQLThreading.h  PreparedStatement.cpp  PreparedStatement.h  QueryHolder.cpp  QueryHolder.h  QueryResult.cpp  SQLOperation.h
src/server/shared/Debugging/: Errors.cpp
src/server/shared/Dynamic/: UnaryFunction.h
src/server/shared/Logging/: Log.cpp  Log.h  LogWorker.cpp  LogWorker.h
src/server/shared/Networking/: AsyncAcceptor.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  worldserver.conf.dist
(+115 files in other folders)
